Добавил ассеты; добавил базовую верстку

--- a/backend/templates/index/index.html.twig
+++ b/backend/templates/index/index.html.twig
@@ -1,8 +1,7 @@
+{% extends "layouts/default.html.twig" %}
 
-{% extends "base.html.twig" %}
+{% block title %}Сокращатель ссылок{% endblock %}
 
-{% block body %}
+{% block main %}
 
-
-
-{% endblock %}
+{% endblock main %}
