--- a/backend/templates/layouts/default.html.twig
+++ b/backend/templates/layouts/default.html.twig
@@ -4,7 +4,7 @@
     <div class="d-flex min-vh-100 flex-column justify-content-between">
         <header class="bg-body bg-body-tertiary py-3">
             <div class="container">
-                <a href="{{ path('base_index') }}">Сокращатель ссылок</a>
+                <a href="{{ path('base_index_get') }}">Сокращатель ссылок</a>
             </div>
         </header>
 
