--- a/backend/templates/index/index.html.twig
+++ b/backend/templates/index/index.html.twig
@@ -28,5 +28,27 @@
                 </p>
             </div>
         {% endif %}
+
+        {% if links|length > 0 %}
+            <div class="mt-5">
+                <h3>Ранее сокращенные ссылки ({{ links|length }})</h3>
+
+                <div class="list-group">
+                    {% for link in links %}
+                        {% set linkUrl =  url('base_redirect', { code: link.shortCode }) %}
+                        <div class="list-group-item">
+                            <div class="d-flex justify-content-between">
+                                <div class="d-flex flex-column justify-content-between align-items-start">
+                                    <a href="{{ linkUrl }}" target="_blank">
+                                        {{ linkUrl }}
+                                    </a>
+                                    <small>{{ link.urlTarget  }}</small>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
     </div>
 {% endblock main %}
