--- a/backend/templates/index/index.html.twig
+++ b/backend/templates/index/index.html.twig
@@ -35,14 +35,19 @@
 
                 <div class="list-group">
                     {% for link in links %}
-                        {% set linkUrl =  url('base_redirect', { code: link.shortCode }) %}
+                        {% set linkUrl =  url('base_redirect', { code: link.link.shortCode }) %}
                         <div class="list-group-item">
                             <div class="d-flex justify-content-between">
-                                <div class="d-flex flex-column justify-content-between align-items-start">
-                                    <a href="{{ linkUrl }}" target="_blank">
-                                        {{ linkUrl }}
-                                    </a>
-                                    <small>{{ link.urlTarget  }}</small>
+                                <div class="d-flex justify-content-between">
+                                    <div class="d-flex align-items-center me-2">
+                                        <img width="40" height="40" src="{{ link.icon }}" alt="favicon of {{ link.link.urlTarget }}">
+                                    </div>
+                                    <div class="d-flex flex-column justify-content-between align-items-start">
+                                        <a href="{{ linkUrl }}" target="_blank">
+                                            {{ linkUrl }}
+                                        </a>
+                                        <small>{{ link.link.urlTarget  }}</small>
+                                    </div>
                                 </div>
                             </div>
                         </div>
